--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
     padding: 150px;
     border-radius: 100px;
     position: absolute;
-    top: 1375px;
+    top: 1475px;
     right: -110px;
     background-color: #b800ff;
     filter: blur(250px);
@@ -40,7 +40,7 @@ body {
     padding: 150px;
     border-radius: 100px;
     position: absolute;
-    top: 2350px;
+    top: 2375px;
     left: -110px;
     background-color: #b800ff;
     filter: blur(250px);
@@ -51,8 +51,19 @@ body {
     padding: 150px;
     border-radius: 100px;
     position: absolute;
-    top: 3250px;
+    top: 3450px;
     right: -110px;
+    background-color: #b800ff;
+    filter: blur(250px);
+    z-index: -1;
+}
+
+.circulo4 {
+    padding: 150px;
+    border-radius: 100px;
+    position: absolute;
+    top: 4250px;
+    left: -110px;
     background-color: #b800ff;
     filter: blur(250px);
     z-index: -1;
@@ -408,4 +419,179 @@ header {
 
 .text2-container-section3 {
     width: 300px;
+}
+
+.section-4 {
+    padding-top: 150px;
+    display: flex;
+    justify-content: center;
+}
+
+.limit-section4 {
+    width: 1366px;
+}
+
+.principal-text-section4 {
+    display: flex;
+    flex-direction: column;
+    visibility: hidden;
+}
+
+.principal-text-section4 h3 {
+    color: #f5f5f5;
+    font-size: 50px;
+    text-align: center;
+}
+
+.principal-text-section4 p {
+    color: rgb(183, 183, 218);
+    font-size: 18px;
+    text-align: center;
+    font-weight: 500;
+}
+
+.team-cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 1%;
+}
+
+.card {
+    width: 22%;
+    padding: 40px 25px;
+    border: 1px solid #b800ff;
+    border-radius: 15px;
+    display: flex;
+    margin-top: 50px;
+    align-items: center;
+    flex-direction: column;
+    box-shadow: 5px 5px 50px 0 #0f001b;
+    backdrop-filter: blur(12px);
+    visibility: hidden;
+}
+
+.card img {
+    border-radius: 200px;
+    filter: saturate(0);
+}
+
+.card h4 {
+    color: #f5f5f5;
+    text-align: center;
+    font-size: 24px;
+    padding-top: 15px;
+}
+
+.card h6 {
+    color: #b800ff;
+    text-align: center;
+    font-size: 12px;
+}
+
+.card p {
+    color: rgb(183, 183, 218);
+    font-size: 13px;
+    text-align: center;
+    padding-top: 15px;
+}
+
+footer {
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    flex-direction: column;
+    background-color: #0f001b;
+    height: 250px;
+    margin-top: 500px;
+    box-shadow: 0px 0px 50px 0 #000;
+}
+
+.form-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 35px 35px;
+    width: 760px;
+    border-radius: 20px;
+    background-color: #1c0035;
+    border: 2px solid #25093b;
+    margin-bottom: 35px;
+    visibility: hidden;
+}
+
+footer h3 {
+    color: #f5f5f5;
+    text-transform: uppercase;
+    margin-bottom: 35px;
+    font-size: 35px;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 10px;
+}
+
+input {
+    width: 100%;
+    border-radius: 10px;
+    outline: none;
+    border: none;
+    padding: 12px;
+    font-size: 16px;
+    font-weight: 600;
+    border: 1px solid #b800ff;
+    color: #25093b;
+}
+
+.input.verified {
+    border: 1px solid #0aa105;
+}
+
+textarea {
+    width: 100%;
+    border-radius: 10px;
+    outline: none;
+    border: none;
+    padding: 12px;
+    font-size: 16px;
+    font-weight: 600;
+    border: 1px solid #b800ff;
+    color: #25093b;
+    resize: none;
+}
+
+textarea::-webkit-scrollbar {
+    background-color: transparent;
+}
+
+form button {
+    border: none;
+    background-color: #f5f5f5;
+    color: #f5f5f5;
+    border-radius: 10px;
+    width: 100%;
+    padding: 12px;
+    margin-top: 15px;
+    background: linear-gradient(45deg, #1100ff 0, #b800ff 75%);
+    background-size: 150%;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 16px;
+    letter-spacing: 1px;
+    transition: 0.3s ease-in-out;
+}
+
+form button:hover {
+    background-size: 100%;
+    transition: 0.3s ease-in-out;
+}
+
+footer p {
+    color: #f5f5f5;
+    font-weight: 300;
+    padding-bottom: 35px;
+    text-align: center;
 }
