--- a/style.css
+++ b/style.css
@@ -206,7 +206,7 @@ header input:checked ~ .sidebar {
 
 .nav-menu2 {
     margin-top: 100px;
-    margin-left: 15%;
+    margin-left: 10%;
     margin-bottom: 65px;
     display: flex;
     flex-direction: column;
@@ -219,7 +219,7 @@ header input:checked ~ .sidebar {
     text-transform: uppercase;
     font-weight: 500;
     position: relative;
-    font-size: 40px;
+    font-size: 20px;
 }
 
 .item-menu2.active {
@@ -232,14 +232,14 @@ header input:checked ~ .sidebar {
 }
 
 .contact2 {
-    margin-left: 15%;
+    margin-left: 10%;
     text-decoration: none;
     color: #1c0035;
     padding: 10px 20px;
     border-radius: 100px;
     text-transform: uppercase;
     font-weight: 600;
-    font-size: 30px;
+    font-size: 16px;
     background-color: #f5f5f5;
 }
 
@@ -301,7 +301,7 @@ header input:checked ~ .overlay {
     justify-content: center;
     height: 100vh;
     background-color: #160129;
-    background-image: url(img/background.jpg);
+    background-image: url(../img/background.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -994,7 +994,12 @@ label {
 }
 
 header {
-    width: 100vw;
+    height: 70px;
+    background-color: #1c0035;
+}
+
+.logo {
+    width: 50px;
 }
 
 .container-section1 {
@@ -1224,14 +1229,6 @@ footer p {
 
 @media (max-width: 510px) {
 
-.item-menu2 {
-    font-size: 30px;
-}
-
-.contact2 {
-    font-size: 25px;
-}
-
 .container-section1 {
     width: 100%;
 }
@@ -1258,14 +1255,6 @@ footer p {
 
 @media (max-width: 375px) {
 
-.item-menu2 {
-    font-size: 25px;
-}
-
-.contact2 {
-    font-size: 20px;
-}
-
 .central-container-section1 {
     justify-content: center;
 }
@@ -1291,10 +1280,6 @@ footer p {
 }
 
 @media (max-width: 330px) {
-
-.nav-menu2, .contact2 {
-    margin-left: 12%;
-}
 
 .container-section1 h1 {
     font-size: 28px;
