--- a/style.css
+++ b/style.css
@@ -304,7 +304,6 @@ header input:checked ~ .overlay {
     background-color: #160129;
     background-image: url('img/Background.jpg');
     background-repeat: no-repeat;
-    background-position: center;
     background-size: cover;
     background-attachment: fixed;
     -webkit-background-size: cover;
@@ -998,6 +997,15 @@ header {
 
 .logo {
     width: 50px;
+}
+
+.section-1 {
+    background-image: url('img/Backgroundimage.jpg');
+    background-attachment: scroll;
+}
+
+.section-1::after {
+    height: 115%;
 }
 
 .container-section1 {
